--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <title>Bootstrap</title>
 
     <!-- import bootstrap -->
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2 border-bottom border-3 border-secondary">
-        <div class="container-fluid w-75 mx-auto">
-            <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2 border-bottom border-3 border-secondary fixed-top">
+        <div class="container-fluid w-75 mx-auto row">
+            <!-- https://getbootstrap.com/docs/5.0/layout/grid/ -->
+            <a class="navbar-brand text-center col-md-12 col-lg-3" href="#">
                 <img src="img/bootstrapimg.png" height="80">
             </a>
-            <div class="collapse navbar-collapse fs-5 text-center">
+            <div class="collapse navbar-collapse fs-5 text-center col-lg-9">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#quemsomos">Quem somos?</a>
@@ -25,31 +28,59 @@
                         <a class="nav-link" href="#">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#Serviços">Serviços</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section id="quemsomos">
-        <div class="container-fluid text-center p-3 bg-dark text-white min-vh-100">
-            <h2 class="display-4 my-4 fw-bold fst-italic text-warning">Quem Somos</h2>
-            <div class="row align-items-center w-100 mx-auto px-5">
-                <div class="col-6">
-                    <p class="px-3 lead fs-5 text mx-auto lh-base text-justify w-100">Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. </p>
+        <div class="container-fluid text-center px-md-3 bg-dark text-white min-vh-100" style="padding-top: 15vh;">
+            <h2 class="display-4 py-4 fw-bold fst-italic text-warning">Quem Somos</h2>
+            <div class="row align-items-center w-100 mx-auto px-2 px-md-5">
+                <div class="col-12 col-md-6">
+                    <p class="px-2 lead fs-5 text mx-auto lh-base text-justify w-100">Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. </p>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <img src="img/bootstrapimg.png" class="w-75 h-100 mt-n1">
                 </div>
             </div>
-            <div class="row align-items-center w-100 mx-auto px-5">
+            <div class="row align-items-center w-100 mx-auto px-2 px-md-5">
                 <div class="col-12">
-                    <p class="px-3 lead fs-5 text mx-auto lh-base text-justify w-100">Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. </p>
+                    <p class="px-2 px-md-3 lead fs-5 text mx-auto lh-base text-justify w-100">Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis. Viva Forevis aptent taciti sociosqu ad litora torquent. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. Si num tem leite então bota uma pinga aí cumpadi! Detraxit consequat et quo num tendi nada. </p>
                 </div>
             </div>
             <!-- class='rounded-circle' deixa border-radius 50% em imgs -->
             
         </div>
     </section>
+    <section id="Serviços">
+        <div class="container-fluid text-center bg-dark text-dark min-vh-100" style="padding-top: 15vh;">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 py-5 px-5 gy-4">
+                <div id="cardOne" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
+                    <img src="./img/imgOne.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                    <div class="card-body">
+                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 1</h3>
+                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                    </div>
+                </div>
+                <div id="cardTwo" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
+                    <img src="./img/imgTwo.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                    <div class="card-body">
+                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 2</h3>
+                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                    </div>
+                </div>
+                <div id="cardThree" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
+                    <img src="./img/imgThree.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                    <div class="card-body">
+                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 3</h3>
+                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+<script type="text/javascript" src="./js/index.js"></script>
 </html>
