--- a/index.html
+++ b/index.html
@@ -56,26 +56,32 @@
     </section>
     <section id="Serviços">
         <div class="container-fluid text-center bg-dark text-dark min-vh-100" style="padding-top: 15vh;">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 py-5 px-5 gy-4">
-                <div id="cardOne" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
-                    <img src="./img/imgOne.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
-                    <div class="card-body">
-                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 1</h3>
-                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+            <div class="row p-5 gy-4">
+                <div class="col-12 col-md-4">
+                    <div id="cardOne" class="card border-0">
+                        <img src="./img/imgOne.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                        <div class="card-body">
+                            <h3 class="card-title mb-4 text-primary fw-bolder">Testando 1</h3>
+                            <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                        </div>
                     </div>
                 </div>
-                <div id="cardTwo" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
-                    <img src="./img/imgTwo.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
-                    <div class="card-body">
-                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 2</h3>
-                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                <div class="col-12 col-md-4">
+                    <div id="cardOne" class="card border-0">
+                        <img src="./img/imgOne.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                        <div class="card-body">
+                            <h3 class="card-title mb-4 text-primary fw-bolder">Testando 1</h3>
+                            <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                        </div>
                     </div>
                 </div>
-                <div id="cardThree" class="card col border-0" onmouseover="mouseSobre(this.id)" onmouseout="mouseSai(this.id)">
-                    <img src="./img/imgThree.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
-                    <div class="card-body">
-                        <h3 class="card-title mb-4 text-primary fw-bolder">Testando 3</h3>
-                        <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                <div class="col-12 col-md-4">
+                    <div id="cardOne" class="card border-0">
+                        <img src="./img/imgOne.jpg" class="card-img-top rounded-circle mx-auto my-3" style="width: 20vw; height: 20vw;" alt="Exemplo Imagem">
+                        <div class="card-body">
+                            <h3 class="card-title mb-4 text-primary fw-bolder">Testando 1</h3>
+                            <p class="card-text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Per aumento de cachacis, eu reclamis. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis.</p>
+                        </div>
                     </div>
                 </div>
             </div>
